# JITStreamer-2.0

./: DOCKER.md  Dockerfile  JITStreamer 2.0 PB.shortcut  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: compile.yml  publish.yml
JITStreamer/: __init__.py  __main__.py  launch.py
