[project]
name = "JITStreamer"
authors = [
    { name = "nythepegasus", email = "me@nythepegas.us" },
    { name = "Stossy11" },
    { name = "khanhduytran0" },
    { name = "JoeMatt", email = "git@joemattiello.com" },
]
maintainers = [{ name = "nythepegasus", email = "me@nythepegas.us" }]
description = "JITStreaner is an iOS 17 JIT enabler for Windows/macOS!"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ios", "automation", "cli", "jit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: iOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
dev = ["build", "pylint"]

[project.urls]
"Homepage" = "https://github.com/nythepegasus/SideJITServer"
"Bug Reports" = "https://github.com/nythepegasus/SideJITServer/issues"

[project.scripts]
JITStreamer = "JITStreamer.__main__:start_server"

[tool.setuptools]
package-data = { "JITStreamer" = [] }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "JITStreamer._version.__version__" }

[tool.setuptools_scm]
version_file = "JITStreamer/_version.py"

[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
